tests/snapshots/test_e2e__codegen@binary_diff.c.snap
---
source: tests/test_e2e.rs
expression: asm_ast
input_file: tests/test_programs/binary_diff.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            AllocateStack {
                stack_offset: -4,
            },
            Mov {
                source: Imm(
                    2,
                ),
                destination: Stack(
                    -4,
                ),
            },
            Binary {
                op: Sub,
                source: Imm(
                    3,
                ),
                destination: Stack(
                    -4,
                ),
            },
            Mov {
                source: Stack(
                    -4,
                ),
                destination: Register(
                    AX,
                ),
            },
            Ret,
        ],
    },
}
