tests/snapshots/test_e2e__codegen@binary_div.c.snap
---
source: tests/test_e2e.rs
expression: asm_ast
input_file: tests/test_programs/binary_div.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            AllocateStack {
                stack_offset: -4,
            },
            Mov {
                source: Imm(
                    4,
                ),
                destination: Register(
                    AX,
                ),
            },
            Cdq,
            Mov {
                source: Imm(
                    2,
                ),
                destination: Register(
                    R10,
                ),
            },
            Idiv {
                operand: Register(
                    R10,
                ),
            },
            Mov {
                source: Register(
                    AX,
                ),
                destination: Stack(
                    -4,
                ),
            },
            Mov {
                source: Stack(
                    -4,
                ),
                destination: Register(
                    AX,
                ),
            },
            Ret,
        ],
    },
}
