tests/snapshots/test_e2e__codegen@binary_mult.c.snap
---
source: tests/test_e2e.rs
expression: asm_ast
input_file: tests/test_programs/binary_mult.c
---
Program {
    function: Function {
        identifier: "main",
        instructions: [
            AllocateStack {
                stack_offset: -4,
            },
            Mov {
                source: Imm(
                    2,
                ),
                destination: Stack(
                    -4,
                ),
            },
            Mov {
                source: Stack(
                    -4,
                ),
                destination: Register(
                    R11,
                ),
            },
            Binary {
                op: Mult,
                source: Imm(
                    3,
                ),
                destination: Register(
                    R11,
                ),
            },
            Mov {
                source: Register(
                    R11,
                ),
                destination: Stack(
                    -4,
                ),
            },
            Mov {
                source: Stack(
                    -4,
                ),
                destination: Register(
                    AX,
                ),
            },
            Ret,
        ],
    },
}
