tests/snapshots/test_e2e__codegen@integer_constant.c.snap
---
source: tests/test_e2e.rs
expression: asm_ast
input_file: tests/test_programs/integer_constant.c
---
Codegen(
    Program {
        function: Function {
            identifier: "main",
            instructions: [
                AllocateStack {
                    stack_offset: 0,
                },
                Mov {
                    source: Imm(
                        1,
                    ),
                    destination: Register(
                        AX,
                    ),
                },
                Ret,
            ],
        },
    },
)
